--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Keypad</title>
 
 
-<link rel="stylesheet" href="demo.css">
+<link rel="stylesheet" href="index.css">
 </head>
 
 <body onload="start()">
